--- a/index.html
+++ b/index.html
@@ -109,14 +109,22 @@ function setActiveStyleSheet(title) {
     }
   }
 }
-function traeCelda(id){
-	var arrId = id.split(".");
-	var x = arrId[1].substring(1);
-	var y = arrId[2].substring(1);
+function traeCelda_1(){
+	
+	document.getElementById("valorCelda").value = miTabla.getCellValue();
+	
+	var pos = miTabla.getCellPos();
+	document.getElementById("XPos").value = pos.x + 1;
+	document.getElementById("YPos").value = pos.y + 1;
 
-	document.getElementById("valorCelda").value = document.getElementById(id).innerHTML;
-	document.getElementById("XPos").value = parseInt(x)+1;
-	document.getElementById("YPos").value = parseInt(y)+1;
+}
+function traeCelda_2(){
+	
+	document.getElementById("valorCelda").value = miTabla2.getCellValue();
+	
+	var pos = miTabla2.getCellPos();
+	document.getElementById("XPos").value = pos.x + 1;
+	document.getElementById("YPos").value = pos.y + 1;
 
 }
 
@@ -124,7 +132,7 @@ function dibuja(){
 			miTabla.libPath								="lib/";
 			miTabla.htmlContainer						= "Contenido"; 	// id del div donde debe ir el contenido
 			miTabla.objectName						= "miTabla"; 		// nombre del objeto 
-			miTabla.returnFunctionName			= "traeCelda"; 	// nombre de la funcion que se llamara para capturar la celda
+			miTabla.returnFunctionName			= "traeCelda_1"; 	// nombre de la funcion que se llamara para capturar la celda
 			miTabla.alternateColor					= true;		  
 			miTabla.alterColor1							= "#DFEEFD";
 			miTabla.alterColor2							= "#FFFFFF";
@@ -158,7 +166,7 @@ function dibuja(){
 			miTabla2.htmlContainer						= "Contenido2"; 	// id del div donde debe ir el contenido
 			miTabla2.objectName						= "miTabla2"; 		// nombre del objeto 
 			miTabla2.id        						= "miTabla2"; 		// nombre del objeto
-			miTabla2.returnFunctionName			= "traeCelda"; 	// nombre de la funcion que se llamara para capturar la celda
+			miTabla2.returnFunctionName			= "traeCelda_2"; 	// nombre de la funcion que se llamara para capturar la celda
 			miTabla2.alternateColor					= true;		  
 			miTabla2.alterColor1							= "#DFEEFD";
 			miTabla2.alterColor2							= "#FFFFFF";
