--- a/samples.html
+++ b/samples.html
@@ -187,7 +187,7 @@ function dibuja(){
 			
       miTabla2.loadEnvironment();
 			
-			setTimeout("miTabla2.getRemoteData('cd_catalog.xml','xml');",100);
+			setTimeout("miTabla2.getRemoteData('cd_catalog.jsn','json');",100);
 			
 			
 			
