se agrego flag para quitar orden en columnas

--- a/samples.html
+++ b/samples.html
@@ -184,6 +184,7 @@ function dibuja(){
 			miTabla2.setSizeColumn[3]				= "150";
 			miTabla2.setSizeColumn[4]				= "80";
 			miTabla2.setSizeColumn[5]				= "80";
+			miTabla2.activeOrden = false;
 			
       miTabla2.loadEnvironment();
 			
