se agrega paginacion para la grilla

--- a/samples.html
+++ b/samples.html
@@ -1,77 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>.:: Javascript Web Control Grid ::.</title>
-
-<script type="text/javascript" src="lib/webControlGrid.js"></script>
-<link rel="stylesheet" type="text/css" href="css/webControlGrid_default.css" title="def">
-<link rel="alternate stylesheet" type="text/css" href="css/webControlGrid_green.css" title="verde">
-
-<STYLE TYPE="text/css">
-	A {
-			font-size: 11px;
-			font-family: Arial;
-			color:yellow;
-			font-variant: small-caps;
-	
-	}
-	body {
-			background-color:rgb(0,96,127)
-	}
-	.texto{
-			font-size: 12px;
-			font-family: Arial;
-			color:white;
-			font-variant: small-caps;
-	}
-	.captura{
-			background-image:url("img/pix.png");
-			background-repeat: no-repeat;
-	}
-	#cuerpo {
-			background-image: url("img/disen.png");
-			background-repeat: no-repeat;
-			position:absolute;
-			top:50px;
-			left:5px;
-			height:620px;
-			
-	}
-	#descarga{
-			width:100%;
-			height:50px;
-			background-color: #293134;
-			color:white;
-			font-size:11px;
-			font-family: Arial;
-			position:absolute;
-			left:0px;
-			bottom:0px;
-			text-align:left;
-			border-top:1px solid white;
-			overflow:hidden;
-	}
-
-/*  ******** Estilos de la grilla *********** */
-	#matrix .jwcgCellX_4{
-		font-size:11px;
-		color:blue;
-		text-align:right;
-	}
-	#matrix .jwcgCellX_5{
-		text-align:right;
-	}
-	#matrix .jwcgCellX_2{
-		font-weight : bold;
-	}
-
-	
-</STYLE>
-
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>.:: Javascript Web Control Grid ::.</title>
+    <script type="text/javascript" src="lib/webControlGrid.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/webControlGrid_default.css" title="def">
+    <link rel="alternate stylesheet" type="text/css" href="css/webControlGrid_green.css" title="verde">
+    <STYLE TYPE="text/css">	A { 			font-size: 11px; 			font-family: Arial; 			color:yellow; 			font-variant: small-caps; 	 	} 	body { 			background-color:rgb(0,96,127) 	} 	.texto{ 			font-size: 12px; 			font-family: Arial; 			color:white; 			font-variant: small-caps; 	} 	.captura{ 			background-image:url("img/pix.png"); 			background-repeat: no-repeat; 	} 	#cuerpo { 			background-image: url("img/disen.png"); 			background-repeat: no-repeat; 			position:absolute; 			top:50px; 			left:5px; 			height:620px; 			 	} 	#descarga{ 			width:100%; 			height:50px; 			background-color: #293134; 			color:white; 			font-size:11px; 			font-family: Arial; 			position:absolute; 			left:0px; 			bottom:0px; 			text-align:left; 			border-top:1px solid white; 			overflow:hidden; 	} /*  ******** Estilos de la grilla *********** */ 	#matrix .jwcgCellX_4{ 		font-size:11px; 		color:blue; 		text-align:right; 	} 	#matrix .jwcgCellX_5{ 		text-align:right; 	} 	#matrix .jwcgCellX_2{ 		font-weight : bold; 	} 	 
+    </STYLE>
 <SCRIPT LANGUAGE="JavaScript" type="text/javascript">
-
-
 try {
  var miTabla = new webControlGrid();
  var miTabla2 = new webControlGrid();
@@ -108,7 +45,6 @@ function traeCelda_1(){
 	var pos = miTabla.getCellPos();
 	document.getElementById("XPos").value = pos.x + 1;
 	document.getElementById("YPos").value = pos.y + 1;
-
 }
 function traeCelda_2(){
 	
@@ -127,11 +63,25 @@ function busca(q) {
 function borraResultados() {
         miTabla.clearSearchResult();
 }
-
+function Paginacion() {
+    var arr = miTabla2.getIndexPagination();
+    var prev ="<input type=button style='border:1px solid gray;font-size:10px' onClick='miTabla2.prevPage();Paginacion()' value='<<'>";
+    var next ="<input type=button style='border:1px solid gray;font-size:10px' onClick='miTabla2.nextPage();Paginacion()' value='>>'>";
+    var table = "<table border=0 cellpadding=0 cellspacing=1><tr><td>"+prev+"</td>"
+    for(var i=0;i < arr.length; i++) {
+        if (i == miTabla2.currentPage) {
+           table +="<td style='border:1px solid white'><B>&nbsp;"+(parseInt(arr[i])+1)+"&nbsp;</B></td>";
+        } else {
+           table +="<td style='border:1px solid white'><span  style='color:cyan' onMouseOver=this.style.cursor='pointer' onClick='miTabla2.gotoPage("+arr[i]+");Paginacion()'>&nbsp;"+(parseInt(arr[i])+1)+"&nbsp;</span></td>";
+        }
+    }
+    table +="<td>"+next+"</td></tr></table>" ;
+    document.getElementById("paginacion").innerHTML = table;
+}
 function dibuja(){
-			miTabla.libPath								="lib/";
+			miTabla.libPath								  ="lib/";
 			miTabla.htmlContainer						= "Contenido"; 	// id del div donde debe ir el contenido
-			miTabla.objectName						= "miTabla"; 		// nombre del objeto 
+			miTabla.objectName						  = "miTabla"; 		// nombre del objeto 
 			miTabla.returnFunctionName			= "traeCelda_1"; 	// nombre de la funcion que se llamara para capturar la celda
 			miTabla.alternateColor					= true;		  
 			miTabla.alterColor1							= "#DFEEFD";
@@ -143,7 +93,6 @@ function dibuja(){
 			miTabla.setLabelColumn[3]				= "Company";
 			miTabla.setLabelColumn[4]				= "Price";
 			miTabla.setLabelColumn[5]				= "Year";
-
 			miTabla.setTagNameInColumn[0]	= "TITLE";
 			miTabla.setTagNameInColumn[1]	= "ARTIST";
 			miTabla.setTagNameInColumn[2]	= "COUNTRY";
@@ -162,23 +111,22 @@ function dibuja(){
 			setTimeout("miTabla.getRemoteData('cd_catalog.xml','xml')",100);
 			// **************************************************************
 			
-			miTabla2.libPath								="lib/";
+			miTabla2.libPath								  ="lib/";
 			miTabla2.htmlContainer						= "Contenido2"; 	// id del div donde debe ir el contenido
-			miTabla2.objectName						= "miTabla2"; 		// nombre del objeto 
-			miTabla2.id        						= "miTabla2"; 		// nombre del objeto
-			miTabla2.returnFunctionName			= "traeCelda_2"; 	// nombre de la funcion que se llamara para capturar la celda
-			miTabla2.alternateColor					= true;		  
+			miTabla2.objectName						    = "miTabla2"; 		// nombre del objeto 
+			miTabla2.id        						    = "miTabla2"; 		// nombre del objeto
+			miTabla2.returnFunctionName			  = "traeCelda_2"; 	// nombre de la funcion que se llamara para capturar la celda
+			miTabla2.alternateColor					  = true;		  
 			miTabla2.alterColor1							= "#DFEEFD";
 			miTabla2.alterColor2							= "#FFFFFF";
-			miTabla2.setTableLayoutSize			= "700";
-			miTabla2.setTableLayoutHeight        = "150";
+			miTabla2.setTableLayoutSize			  = "700";
+			miTabla2.setTableLayoutHeight     = "150";
 			miTabla2.setLabelColumn[0]				= "::Title::";
 			miTabla2.setLabelColumn[1]				= "Artist";
 			miTabla2.setLabelColumn[2]				= "Country";
 			miTabla2.setLabelColumn[3]				= "Company";
 			miTabla2.setLabelColumn[4]				= "Price";
 			miTabla2.setLabelColumn[5]				= "Year";
-
 			miTabla2.setTagNameInColumn[0]	= "TITLE";
 			miTabla2.setTagNameInColumn[1]	= "ARTIST";
 			miTabla2.setTagNameInColumn[2]	= "COUNTRY";
@@ -194,6 +142,13 @@ function dibuja(){
 			miTabla2.setSizeColumn[5]				= "80";
 			miTabla2.activeOrden = false;
 			
+			
+      miTabla2.enablePagination         = true;
+      miTabla2.rowsInPage               = 10;
+      miTabla2.currentPage              = 0;
+      miTabla2.afterLoad                = "Paginacion()";			
+			
+			
       miTabla2.loadEnvironment();
 			
 			setTimeout("miTabla2.getRemoteData('cd_catalog.jsn','json');",100);
@@ -202,102 +157,101 @@ function dibuja(){
 			
 			
 }
-
-
 </script>
-
-<body onload="dibuja(); descargaTransparente() " >
-
-<div id='cuerpo'>
-<TABLE  ALIGN="center" BORDER="0" cellpadding="2" cellspacing="2" WIDTH="250"  >
-	<TR>
-	<TD valign=top >
-		<TABLE WIDTH="100%" cellpadding="0" cellspacing="0"  BORDER="0" >
-		<TR>
-			<TD style="height:210px" valign="bottom">
-			<IMG SRC="img/pix.png" WIDTH="100%" HEIGHT="88" BORDER="0" ALT="" USEMAP="#estilos" >
-			<MAP NAME="estilos"> 
-				<AREA SHAPE=RECT  COORDS="19,0,155,25" HREF="javascript:miTabla.alterColor1= '#DFEEFD';miTabla.alterColor2='#FFFFFF';miTabla.render();setActiveStyleSheet('def')"  ALT="Default"  >
-				<AREA SHAPE=RECT  COORDS="19,30,155,55" HREF="javascript:miTabla.alterColor1= '#669999';miTabla.alterColor2='#669999';miTabla.render();setActiveStyleSheet('verde');"  ALT="Green Style">
-				<AREA SHAPE=RECT  COORDS="19,60,155,85" HREF="javascript:setActiveStyleSheet('niuna')"  ALT="whithout style"> 
-			</MAP>
-			</TD>	
-		</TR>
-		</table>
-		<TABLE WIDTH="100%" cellpadding="0" cellspacing="0"  class="captura" border=0>
-		<TR>
-			<TD WIDTH="10"></TD>
-			<TD valign="bottom" style="height:170px;">
-					<table BORDER="0" class="texto">
-							<tr>
-								<td>valor celda</td><td> :</td><td> <input type="text" value="" id='valorCelda' size=15 ></td>
-							</tr>
-							<tr>
-								<td>columna</td><td> :</td><td><input type="text" value="" id='XPos' size=15 ></td>
-							</tr>
-							<tr>
-								<td>fila</td><td> :</td><td><input type="text" value="" id='YPos'  size=15></td>
-							</tr>
-				</table>
-			<br>	<br>
-			</TD>
-		</TR>
-		</TABLE>
-	</TD>
-</TR>
-</TABLE>
-</div>
-
-<div  style="position:absolute;top:12px;left:270px;font-family:arial;color:white;font-size:12px" >
-  Utilizando metodo processXML (Archivo cd_catalog.xml)
-  <br>
-  <select id = 'columna' style='border:1px solid gray;font-size:10px'>
-     <option selected>Title</option>
-     <option >Artist</option>
-     <option >Country</option>
-     <option >Company</option>
-     <option >Price</option>
-     <option >Year</option>
-  </select>
-  <input type='text' id='query' value="" style='border:1px solid gray;font-size:10px'>
-  <input type=button onClick="busca(document.getElementById('query').value)" value="Buscar" style='border:1px solid gray;font-size:10px'>
-  <input type=button onClick="borraResultados()" value="Borra resultados" style='border:1px solid gray;font-size:10px'>
-  </div>
-<div  id="Contenido" style="position:absolute;top:55px;left:270px">
-	<span class="texto">Cargando Tabla, esto puede tardar unos minutos...<br><br></span>
-	<IMG SRC="img/loading.gif" WIDTH="200" HEIGHT="8" BORDER="0" ALT="">
-</div>
-
-<div  style="position:absolute;top:444px;left:270px;font-family:arial;color:white;font-size:12px" >Utilizando metodo processJSON (Archivo cd_catalog.jsn)</div>
-<div  id="Contenido2" style="position:absolute;top:460px;left:270px">
-	<span class="texto">Cargando Tabla, esto puede tardar unos minutos...<br><br></span>
-	<IMG SRC="img/loading.gif" WIDTH="200" HEIGHT="8" BORDER="0" ALT="">
-</div>
-
-
-<div id='descarga' > 
-			<table WIDTH="100%" border=0  cellpadding="0" cellspacing="2" >
-				<tr>
-					<td valign=top>
-						<TABLE cellpadding="0" cellspacing="2" width="100%">
-						<TR>
-							<TD width=150>Licencia</TD>
-							<TD width=10>:</TD>
-							<TD><a href="LICENCIA.txt">GPL</a></TD>
-						</TR>
-						<TR>
-							<TD>Descarga</TD>
-							<TD>:</TD>
-							<TD><a href="http://github.com/pedroxmeza/jwcg">GITHUB</a></TD>
-						</TR>
-						<TR>
-							<TD>Contacto</TD>
-							<TD>:</TD>
-							<TD><a href="mailto:pedroxmeza@gmail.com">pedroxmeza@gmail.com</a></TD>
-						</TR>
-						</table>
-					</td>
-				</tr>
-			</table>
-</div>
-</body>
+    <body onload="dibuja(); descargaTransparente() " >
+      <div id='cuerpo'>
+        <TABLE  ALIGN="center" BORDER="0" cellpadding="2" cellspacing="2" WIDTH="250"  >	
+          <TR>	
+            <TD valign=top >		
+              <TABLE WIDTH="100%" cellpadding="0" cellspacing="0"  BORDER="0" >		
+                <TR>			
+                  <TD style="height:210px" valign="bottom">			
+                    <IMG SRC="img/pix.png" WIDTH="100%" HEIGHT="88" BORDER="0" ALT="" USEMAP="#estilos" >			
+                    <MAP NAME="estilos">  				
+                      <AREA SHAPE=RECT  COORDS="19,0,155,25" HREF="javascript:miTabla.alterColor1= '#DFEEFD';miTabla.alterColor2='#FFFFFF';miTabla.render();setActiveStyleSheet('def')"  ALT="Default"  >				
+                      <AREA SHAPE=RECT  COORDS="19,30,155,55" HREF="javascript:miTabla.alterColor1= '#669999';miTabla.alterColor2='#669999';miTabla.render();setActiveStyleSheet('verde');"  ALT="Green Style">				
+                      <AREA SHAPE=RECT  COORDS="19,60,155,85" HREF="javascript:setActiveStyleSheet('niuna')"  ALT="whithout style">  			
+                    </MAP>			</TD>	 		
+                </TR>		
+              </table>		
+              <TABLE WIDTH="100%" cellpadding="0" cellspacing="0"  class="captura" border=0>		
+                <TR>			
+                  <TD WIDTH="10"></TD>			
+                  <TD valign="bottom" style="height:170px;">					
+                    <table BORDER="0" class="texto">							
+                      <tr>								<td>valor celda</td><td> :</td><td> 
+                          <input type="text" value="" id='valorCelda' size=15 ></td>							
+                      </tr>							
+                      <tr>								<td>columna</td><td> :</td><td>
+                          <input type="text" value="" id='XPos' size=15 ></td>							
+                      </tr>							
+                      <tr>								<td>fila</td><td> :</td><td>
+                          <input type="text" value="" id='YPos'  size=15></td>							
+                      </tr>				
+                    </table>			
+                    <br>	
+                    <br>			</TD>		
+                </TR>		
+              </TABLE>	</TD>
+          </TR>
+        </TABLE>
+      </div>
+      <div  style="position:absolute;top:12px;left:270px;font-family:arial;color:white;font-size:12px" >  Utilizando metodo processXML (Archivo cd_catalog.xml)   
+        <br>  
+        <select id = 'columna' style='border:1px solid gray;font-size:10px'>     
+          <option selected>Title
+          </option>     
+          <option >Artist
+          </option>     
+          <option >Country
+          </option>     
+          <option >Company
+          </option>     
+          <option >Price
+          </option>     
+          <option >Year
+          </option>  
+        </select>  
+        <input type='text' id='query' value="" style='border:1px solid gray;font-size:10px'>  
+        <input type=button onClick="busca(document.getElementById('query').value)" value="Buscar" style='border:1px solid gray;font-size:10px'>  
+        <input type=button onClick="borraResultados()" value="Borra resultados" style='border:1px solid gray;font-size:10px'>  
+      </div>  
+      <div  id="Contenido" style="position:absolute;top:55px;left:270px">	
+        <span class="texto">Cargando Tabla, esto puede tardar unos minutos...
+          <br>
+          <br>
+        </span>	
+        <IMG SRC="img/loading.gif" WIDTH="200" HEIGHT="8" BORDER="0" ALT="">
+      </div>
+      <div  style="position:absolute;top:444px;left:270px;font-family:arial;color:white;font-size:12px" >Utilizando metodo processJSON (Archivo cd_catalog.jsn)
+      </div>
+      <div  id="Contenido2" style="position:absolute;top:460px;left:270px">	
+        <span class="texto">Cargando Tabla, esto puede tardar unos minutos...
+          <br>
+          <br>
+        </span>	
+        <IMG SRC="img/loading.gif" WIDTH="200" HEIGHT="8" BORDER="0" ALT="">
+      </div>
+      <div id='paginacion' style="position:absolute;top:630px;left:300px;font-family:arial;color:white;font-size:12px" >
+      </div>
+      <div id='descarga' >  			
+        <table WIDTH="100%" border=0  cellpadding="0" cellspacing="2" >				
+          <tr>					
+            <td valign=top>						
+              <TABLE cellpadding="0" cellspacing="2" width="100%">						
+                <TR>							
+                  <TD width=150>Licencia</TD>							
+                  <TD width=10>:</TD>							<TD>
+                    <a href="LICENCIA.txt">GPL</a></TD>						
+                </TR>						
+                <TR>							<TD>Descarga</TD>							<TD>:</TD>							<TD>
+                    <a href="http://github.com/pedroxmeza/jwcg">GITHUB</a></TD>						
+                </TR>						
+                <TR>							<TD>Contacto</TD>							<TD>:</TD>							<TD>
+                    <a href="mailto:pedroxmeza@gmail.com">pedroxmeza@gmail.com</a></TD>						
+                </TR>						
+              </table>					</td>				
+          </tr>			
+        </table>
+      </div>
+    </body>
